# magicnet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: hatch-publish.yml
examples/: a_native_connection.py  b_client.py  b_common.py  b_panda3d_client.py  b_panda3d_transport.py  b_server.py
examples/c_network_objects/: c_client.py  c_common.py  c_marshal_things.py  c_server.py
src/magicnet/: __init__.py
src/magicnet/batteries/: asyncio_network_manager.py  encoders.py  logging_node.py  transport_managers.py
src/magicnet/batteries/middlewares/: message_validation.py  zone_routing.py
src/magicnet/batteries/transports/: single_app.py  socket_asyncio.py
src/magicnet/core/: connection.py  datagram_processor.py  errors.py  handle_filter.py  net_globals.py  net_message.py  network_manager.py  network_object.py  protocol_encoder.py  transport_handler.py  transport_manager.py
src/magicnet/netobjects/: network_field.py  network_object.py  network_object_manager.py  network_object_meta.py  network_object_registry.py
src/magicnet/protocol/: dataclass_converter.py  message_processors.py  network_typechecker.py  network_types.py  processor_base.py  protocol_globals.py  typehint_marshal.py
src/magicnet/protocol/processors/: data.py  handshake.py  network_objects.py
src/magicnet/util/: messenger.py
src/magicnet/util/typechecking/: dataclass_converter.py  field_signature.py  magicnet_typechecker.py  typehint_marshal.py
tests/: helpers.py  net_tester_generic.py  test_typehint_marshal.py  test_validation.py
tests/data_layer/: test_typehint_marshal.py  test_validation.py
tests/net_objects/: net_tester_netobj.py  test_basics.py  test_net_fields.py  test_zones.py
tests/security_layer/: test_invalid_handshake.py
