[tool.ruff]

select = ["E", "F", "W", "I", "N", "UP", "YTT", "ASYNC", "S", "BLE", "FBT", "B",
          "A001", "A002", "DTZ", "G", "PIE", "T20", "RET", "TID", "PTH",
          "ERA", "PERF", "ISC"]

line-length = 90
target-version = "py310"
src = ["src"]
extend-exclude = ["examples"]

[tool.ruff.lint.pyflakes]
extend-generics = [
    "magicnet.core.transport_handler.TransportHandler",
    "magicnet.core.network_manager.NetworkManager",
    "magicnet.util.messenger.MessengerNode",
]

[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magicnet"
version = "0.0.1"
authors = [
    {name = "Wizzerinus", email = "quillinde@gmail.com"}
]
description = "MagicNet is a modern and flexible networking library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
standard = ["msgpack~=1.0", "pydantic~=2.0"]

[project.urls]
homepage = "https://github.com/wizzerinus/magicnet"
bugtracker = "https://github.com/wizzerinus/magicnet/issues"
