# Base stuff
[project]
name = "magicnet"
authors = [{ name = "Wizzerinus", email = "quillinde@gmail.com" }]
description = "MagicNet is a modern and flexible networking library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dynamic = ["version"]
keywords = ["networking", "astron"]
dependencies = ["typing_extensions"]

[project.urls]
homepage = "https://github.com/wizzerinus/magicnet"
bugtracker = "https://github.com/wizzerinus/magicnet/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
standard = ["msgpack~=1.0"]

# Tools
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
extend-exclude = ["examples", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A001",
    "A002",
    "DTZ",
    "G",
    "PIE",
    "T20",
    "RET",
    "TID",
    "PTH",
    "ERA",
    "PERF",
    "ISC",
    "TRY",
]
ignore = ["PERF203", "N818", "PTH123", "S101"]

[tool.ruff.lint.pyflakes]
extend-generics = [
    "magicnet.core.transport_handler.TransportHandler",
    "magicnet.core.network_manager.NetworkManager",
    "magicnet.util.messenger.MessengerNode",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

# Hatch
[tool.hatch]
version.path = "src/magicnet/__about__.py"

[tool.hatch.build]
exclude = ["/tests", "/examples"]
sources = ["src"]

[tool.hatch.envs.default]
dependencies = ["magicnet[standard]"]

[tool.hatch.envs.dev]
dependencies = ["magicnet[standard]", "black", "ruff", "pytest"]
[tool.hatch.envs.dev.scripts]
run-tests = "pytest {args:tests}"
run-black = "black {args:.}"
run-ruff = "ruff --fix {args:.}"
clean = ["run-black", "run-ruff"]
check-black = "black --quiet --check --diff {args:.}"
check-ruff = "ruff check --quiet {args:.}"
lint = ["check-black", "check-ruff"]

[tool.hatch.envs.test]
dependencies = ["magicnet[standard]", "black", "ruff", "pytest"]
[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.pyright]
reportUnusedCallResult = false
reportExplicitAny = false
reportAny = false
reportIgnoreCommentWithoutRule = false
reportImplicitOverride = false
reportImportCycles = false
pythonVersion = "3.10"
exclude = ["venv", "examples"]
ignore = [
    "src/magicnet/util/typechecking",
    "src/magicnet/protocol/network_types.py",
]
